Support solidity code coverage with hardhat